--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.version>4.3.0.RELEASE</spring.version>
 		<surefire.version>2.19.1</surefire.version>
 	</properties>
@@ -32,6 +34,13 @@
 			<version>2.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+
 		<!-- Jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -43,6 +52,14 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- webjar -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.6</version>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
